# HSE.2DImageProcessing.Week7

./: .gitignore  README.md  REPORT
Dataset/: atkinson.yml  clarke.yml  cohen.yml  cumberbatch.yml  freeman.yml  frost.yml  knightley.yml  laurie.yml  lincoln.yml  pegg.yml
Project/: CMakeLists.txt  main.cpp
Project/include/: annotations_tracker.h  args_parser.h  bag_of_words.h  bow_recognition_model.h  confusion_matrix_tracker.h  dlib_face_detection_model.h  dlib_utils.h  dnn_recognition_model.h  face_detection_model.h  face_recognition_model.h  face_tracking_model.h  face_utils.h  file_utils.h  hog_recognition_model.h  labels_resolver.h  metrics_tracker.h  metrics_utils.h  opencv_face_detection_model.h  playback_tracker.h  rect.h  strings.h  video_player.h
Project/src/: annotations_tracker.cpp  args_parser.cpp  bag_of_words.cpp  bow_recognition_model.cpp  confusion_matrix_tracker.cpp  dlib_face_detection_model.cpp  dnn_recognition_model.cpp  face_detection_model.cpp  face_tracking_model.cpp  face_utils.cpp  file_utils.cpp  hog_recognition_model.cpp  labels_resolver.cpp  metrics_tracker.cpp  opencv_face_detection_model.cpp  playback_tracker.cpp  rect.cpp  video_player.cpp
Samples/: model_dnn_knn.yml
Samples/Test/atkinson/: 1.txt  2.txt  3.txt
Samples/Test/clarke/: 1.txt  2.txt
Samples/Test/cohen/: 1.txt  2.txt  3.txt
Samples/Test/cumberbatch/: 1.txt  2.txt
Samples/Test/freeman/: 1.txt  2.txt
Samples/Test/frost/: 1.txt  2.txt
Samples/Test/knightley/: 1.txt  2.txt
Samples/Test/laurie/: 1.txt  2.txt  3.txt
Samples/Test/lincoln/: 1.txt  2.txt
Samples/Test/pegg/: 1.txt  2.txt  3.txt
Samples/Test/unknown/: 01.txt  03.txt  04.txt  05.txt  07.txt  08.txt  09.txt  10.txt  2.txt  6.txt  8.txt
UML/: face_detection.puml  face_recognition.puml
